Adding condesend interpretation and python data structure draft

--- a/pitchme.ipynb
+++ b/pitchme.ipynb
@@ -37,7 +37,11 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "$$\\large \\lfloor_{0 \\le i\\le k} \\sum_{0 \\le j \\le n} (M_{i, c_{j}} - x_{j})^2 \\rfloor < M_{i, r}$$"
+    "$$\\large \\lfloor_{0 \\le i\\le k} \\sum_{0 \\le j \\le n} (M_{i, c_{j}} - x_{j})^2 \\rfloor < M_{i, r}$$\n",
+    "\n",
+    "## Classify\n",
+    "\n",
+    "$$P \\in C_1 \\iff "
    ]
   },
   {
