clean run on minas map jupyter

--- a/stream_map_minas.ipynb
+++ b/stream_map_minas.ipynb
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -70,19 +70,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "(2786.5029823676064,\n",
+       "(133.4693311370858,\n",
        " {'label': 'zero',\n",
-       "  'mu': array([28.94058831, 16.26390948]),\n",
-       "  'sigma': array([80.51656701, 13.87988037])})"
+       "  'mu': array([65.7300201 , 95.23653071]),\n",
+       "  'sigma': array([55.19206604, 31.98061262])})"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -95,25 +95,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['[UNKNOWN] 0: [64.64031652  9.92274428]',\n",
-       " '[UNKNOWN] 1: [42.67465003 -9.59614246]',\n",
-       " '[UNKNOWN] 2: [172.48592745 122.7659806 ]',\n",
-       " '[UNKNOWN] 3: [126.04851997  59.10808376]',\n",
-       " '[UNKNOWN] 4: [  7.36125681 -12.16426458]',\n",
-       " '[UNKNOWN] 5: [39.54425779 -6.45368559]',\n",
-       " '[UNKNOWN] 6: [-61.84162789 141.67665956]',\n",
-       " '[UNKNOWN] 7: [130.33388127  47.73606348]',\n",
-       " '[UNKNOWN] 8: [20.07312355 28.85400113]',\n",
-       " '[UNKNOWN] 9: [59.51815929 54.98695464]']"
+       "['[UNKNOWN] 0: [ 52.78176912 103.05921303]',\n",
+       " '[UNKNOWN] 1: [ 50.26734963 152.5416514 ]',\n",
+       " '[UNKNOWN] 2: [-51.5455268  -6.617396 ]',\n",
+       " '[UNKNOWN] 3: [47.58132281 67.65518789]',\n",
+       " '[UNKNOWN] 4: [119.4370061  121.71292272]',\n",
+       " '[UNKNOWN] 5: [ 74.40575249 -73.30691043]',\n",
+       " '[UNKNOWN] 6: [35.50742835 99.55367759]',\n",
+       " '[UNKNOWN] 7: [-56.41409385  63.99381037]',\n",
+       " '[UNKNOWN] 8: [165.88229315  58.89362904]',\n",
+       " '[UNKNOWN] 9: [ 77.70305528 210.21395168]']"
       ]
      },
-     "execution_count": 16,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -139,7 +139,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -149,7 +149,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -268,264 +268,102 @@
      "output_type": "stream",
      "text": [
       "[Recurence] zero\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "{'label': 'New 0', 'mu': array([95.62776888, 49.53721567]), 'sigma': array([ 9.26680914, 25.88768122])}\n",
       "[Recurence] duo\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 2\n",
-      "[Recurence] duo\n",
-      "[Recurence] duo\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 7\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 9\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 1', 'mu': array([68.67177717, 60.60408923]), 'sigma': array([62.39674202, 28.6777861 ])}\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 2', 'mu': array([51.42904823, 72.95302401]), 'sigma': array([34.72700621, 38.01459372])}\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 3', 'mu': array([54.6921036, 78.7466267]), 'sigma': array([50.77841234, 20.02465851])}\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 4', 'mu': array([86.22302566, 39.04721525]), 'sigma': array([59.48084162, 62.61470824])}\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 4\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 5', 'mu': array([37.68919996, 48.61385052]), 'sigma': array([11.56621975, 57.77446024])}\n",
-      "[Recurence] duo\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 4\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] duo\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 6', 'mu': array([83.12761285, 32.59300811]), 'sigma': array([52.79686024, 43.75827336])}\n",
       "[Recurence] zero\n",
-      "[Recurence] New 0\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 4\n",
-      "[Recurence] New 6\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 7', 'mu': array([51.00962635, 35.72075533]), 'sigma': array([37.32163004,  3.70798998])}\n",
       "[Recurence] duo\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 4\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 8', 'mu': array([51.05661375, 29.02074702]), 'sigma': array([32.69539393, 44.09471945])}\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 5\n",
-      "[Recurence] New 3\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "[Recurence] New 2\n",
-      "{'label': 'New 9', 'mu': array([94.38706637, 29.84986015]), 'sigma': array([14.5931346 , 89.90902475])}\n",
-      "known=19845, unknown=7779, cleanup=269, fallback=49, recurenceDetection=1799, noveltyDetection=11\n"
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 0', 'mu': array([15.95136492, 22.66827519]), 'sigma': array([99.93314738, 29.06291395])}\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 1', 'mu': array([98.49048863, 49.70572952]), 'sigma': array([95.28541896, 26.01520167])}\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] zero\n",
+      "{'label': 'New 2', 'mu': array([12.9583473 , 90.74654257]), 'sigma': array([61.4859157 , 92.22748856])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 3', 'mu': array([59.19562418, 78.97363115]), 'sigma': array([33.3492098 , 19.06209321])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 4', 'mu': array([72.6139963 , 72.84285526]), 'sigma': array([94.29156729, 56.91851959])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 5', 'mu': array([ 2.90549169, 70.1184157 ]), 'sigma': array([19.57541104, 37.79845284])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 6', 'mu': array([86.65911317, 71.65891076]), 'sigma': array([73.11288898, 99.95893671])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 7', 'mu': array([ 4.01701613, 23.89556781]), 'sigma': array([22.67713093, 46.69623062])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 8', 'mu': array([ 8.05473335, 51.66068289]), 'sigma': array([39.09064518, 76.36724572])}\n",
+      "[Recurence] duo\n",
+      "[Recurence] duo\n",
+      "{'label': 'New 9', 'mu': array([21.11155456, 75.07207241]), 'sigma': array([10.57020344, 58.82352432])}\n",
+      "known=19300, unknown=6923, cleanup=255, fallback=64, recurenceDetection=3352, noveltyDetection=20\n"
      ]
     }
    ],
