Untracked win lost changes

--- a/py-references/minas_dask.ipynb
+++ b/py-references/minas_dask.ipynb
@@ -4,16 +4,7 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/home/puhl/anaconda3/lib/python3.7/site-packages/distributed/config.py:20: YAMLLoadWarning: calling yaml.load() without Loader=... is deprecated, as the default Loader is unsafe. Please read https://msg.pyyaml.org/load for full details.\n",
-      "  defaults = yaml.load(f)\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import logging, scipy, dask, pandas, numpy, time, typing, asyncio\n",
     "import dask.dataframe as ddf\n",
@@ -31,17 +22,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
     "# client = dask_distributed.Client()\n",
     "\n",
     "# StreamZ Dask\n",
-    "client = await Client(processes=False)\n",
+    "# client = await Client(processes=False)\n",
     "\n",
     "# StreamZ Dask Async\n",
-    "# client = await Client(processes=False, asynchronous=True)"
+    "client = await Client(processes=False, asynchronous=True)\n",
+    "\n",
+    "# client = dask_distributed.Client('tcp://192.168.15.12:8786')\n",
+    "client"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "<Future pending>"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "client.close()"
    ]
   },
   {
